--- a/lesson10/css/style.css
+++ b/lesson10/css/style.css
@@ -194,7 +194,7 @@ nav .col-right img {
   margin: 10px;
   width: 546px;
   height: 399px;
-  border: 1px solid #000;
+  border: 1px solid #fff;
   border-radius: 10px;
   background-color: #fff;
   box-sizing: border-box;
