--- a/Task11/css/style.css
+++ b/Task11/css/style.css
@@ -358,7 +358,6 @@
   height: 677px;
   background: #FFFFFF;
   border-radius: 10px;
-  border: 1px solid #000;
   display: flex;
   position: relative;
 }
@@ -369,6 +368,12 @@
 }
 .stack-title2{
   margin-top: 55px;
+}
+.stack-title2 p{
+  font-size: 20px;
+  line-height: 30px;
+  color: #898989;
+  margin-bottom: 5px ;
 }
 
 .stack-resume-box .line2{
@@ -389,3 +394,99 @@
  left: 737px;
 
 }
+.oylik{
+  position: absolute;
+  top:215px ;
+  left: 185px;
+}
+.stack-paragraf ul{
+  position: absolute;
+  top:414px ;
+  left: 215px;
+}
+
+.stack-paragraf .line3{
+  display: flex;
+  margin-top: 30px;
+}
+.stack-paragraf .line4{
+  display: flex;
+ margin-top:50px ;
+}
+.stack-paragraf li{
+  margin-right: 98px ;
+}
+
+.stack-paragraf h4{
+  position: absolute;
+  top: 352px ;
+  left: 185px;
+  font-size: 25px;
+  line-height: 25px;
+  letter-spacing: -0.12px;
+}
+
+/* Kursni harid qilish */
+
+.buy-course .title-buy{
+  margin-top: 170px;
+}
+.col-buy-course{
+  position: relative;
+  margin-bottom:32px ;
+}
+.title-buy h1{
+  font-size: 45px;
+  line-height: 55px;
+  letter-spacing: -0.02em;
+  font-family: Montserrat-ExtraBold ;
+  margin-bottom:32px ;
+}
+.title-buy p{
+  font-size: 25px;
+  line-height: 38px;
+  letter-spacing: -0.02em;
+  margin-bottom: 73px;
+}
+.line-buy{
+  width: 570px;
+  height: 0px;
+  border: 2px solid #000000;
+}
+.col-buy{
+  display: flex;
+  margin-top: 32px ;
+}
+.paragraf-buy{
+  margin-left: 26px;
+}
+.box-price{
+  width: 145px;
+  height: 30px;
+  background: #ECB559;
+  border-radius: 100px;
+  position: absolute;
+  top: 72px ;
+  right: 749px;
+}
+.box-price p{
+  font-size: 16px;
+  line-height: 30px;
+  text-decoration-line: line-through;
+  color: #000;
+  margin-left: 9px;
+}
+.paragraf-buy p{
+  font-size: 20px;
+  line-height: 30px;
+}
+.paragraf-buy h3{
+  font-size: 30px;
+  line-height: 40px;
+}
+.plus-icon{
+  position: absolute;
+  top: 60px ;
+  right:635px ;
+}
+
