--- a/ekstra task1/style.css
+++ b/ekstra task1/style.css
@@ -34,11 +34,8 @@ body{
     position: relative;
 } 
 .col-5 h1 {
-    position: absolute;
-    left: 0px;
-    top: 60px;
     height: 231px;
-    font-weight: bold;
+    font-weight: bolder ;
     font-size: 80px;
     line-height: 77px;
     letter-spacing: -2.50105px;
