--- a/maxway/style/custom.css
+++ b/maxway/style/custom.css
@@ -61,7 +61,7 @@
   -webkit-mask-image: url("../icons/plus.svg");
 }
 
-.icon.icon-play-market {
+.icon.icon-play {
   mask-image: url("../icons/play-market.svg");
   -webkit-mask-image: url("../icons/play-market.svg");
 }
